--- a/pictureGallary.html
+++ b/pictureGallary.html
@@ -104,10 +104,10 @@
           <i class="fa-brands fa-linkedin"></i>
         </div>
         <div class="col-sm-3 social">
-          <i class="fa-solid fa-envelope me-1"></i>erajmishra000@gmail.com
+          <i class="fa-solid fa-envelope me-1"></i>abc123@gmail.com
         </div>
         <div class="col-sm-3 social">
-          <i class="fa-solid fa-phone me-1"></i>+91 6387874250 || +11 458765678
+          <i class="fa-solid fa-phone me-1"></i>+91 9876545673 || +11 458765678
         </div>
         <div class="col-sm-3 social">
           <span class="btn btn-outline-danger rounded">Contact Us</span>
