changing fille name

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="index7.html"
+                      href="index.html"
                       ><i class="fa-solid fa-house"></i>Home</a
                     >
                   </li>
