--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
         <div class="col-12 menu">
           <!-- start menu -->
           <nav class="navbar navbar-expand-lg navbar-light" id="menu">
-            <a class="navbar-brand d-flex align-items-center" href="index7.html"
+            <a class="navbar-brand d-flex align-items-center" href="index.html"
               ><img
                 src="images/logo1.jpg"
                 class="img-fluid"
@@ -141,7 +141,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="index7.html"
+                      href="index.html"
                       ><i class="fa-solid fa-house"></i>Home</a
                     >
                   </li>
