--- a/Register.html
+++ b/Register.html
@@ -120,7 +120,7 @@
         <div class="col-12 menu">
           <!-- start menu -->
           <nav class="navbar navbar-expand-lg navbar-light" id="menu">
-            <a class="navbar-brand d-flex align-items-center" href="index7.html"
+            <a class="navbar-brand d-flex align-items-center" href="index.html"
               ><img
                 src="images/logo1.jpg"
                 class="img-fluid"
@@ -144,7 +144,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index7.html"
+                    <a class="nav-link" aria-current="page" href="index.html"
                       ><i class="fa-solid fa-house"></i>Home</a
                     >
                   </li>
